--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/CDKGlobal/angular-watchcount",
   "devDependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-uglify": "^0.7.0"
   }
 }
